うんこゲーム実装

--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -50,12 +50,9 @@
                         <p>掲示板を解析し、住民の需要や関心ごとを解析します。中島の環境整備や行政への働きかけを行なっていきます</p>
                     </div>
                     <div class="service-item">
-                        <h3>相談</h3>
-                        <p>ユーザーみんなで育てるWebサービスを目指しています。追加して欲しい機能を募集します。</p>
-                    </div>
-                    <div class="service-item">
-                        <h3>引越し</h3>
-                        <p>中島に引っ越すことを考え中の方に役立つ情報を載せています。</p>
+                        <h3>ゲーム制作</h3>
+                        <p>ゴミモンゲームを製作中</p>
+                        <a href = "{% url 'map' %}">gomimon</a>
                     </div>
 
                 </div>
