--- a/gomimon/templates/registration/login.html
+++ b/gomimon/templates/registration/login.html
@@ -168,7 +168,7 @@
             </div>
             <button type="submit">ログイン</button>
             <a href="{% url 'password_reset' %}" class="forgot-password">パスワードを忘れた場合</a>
-            <p class="register-link">アカウントをお持ちでないですか？ <a href="{% url 'register' %}">登録はこちら</a></p>
+            <p class="register-link">アカウントをお持ちでないですか？ <a href="{% url 'gomimon_register' %}">登録はこちら</a></p>
         </form>
     </div>
 </body>
