--- a/gomimon/templates/gomimon/error.html
+++ b/gomimon/templates/gomimon/error.html
@@ -63,7 +63,7 @@
         <h1>ユーザー登録が必要です</h1>
         <p>この機能を利用するには、ユーザー登録が必要です。</p>
         <p>まだアカウントをお持ちでない場合は、以下のボタンから登録してください。</p>
-        <a href="{% url 'register' %}" class="button-link">新規登録</a>
+        <a href="{% url 'gomimon_register' %}" class="button-link">新規登録</a>
         <p>すでにアカウントをお持ちの場合は、<a href="{% url 'login' %}" class="secondary-link">こちらからログイン</a>してください。</p>
     </div>
 </body>
