うんこ掛け算、バグ処理

--- a/poopgame/templates/poopgame/multiply3.html
+++ b/poopgame/templates/poopgame/multiply3.html
@@ -61,7 +61,7 @@
             <button type="button" class="num-btn">3</button>
             <button type="button" class="num-btn" id="clear-btn">けす</button>
             <button type="button" class="num-btn">0</button>
-            <button type="button" class="num-btn" id="submit-btn">こたえる</button>
+            <button type="button" class="num-btn" id="submit-btn">かいｹﾂ</button>
           </div>
       </form>
     {% endif %}
