デイリーランキング追加

--- a/poopgame/templates/poopgame/home.html
+++ b/poopgame/templates/poopgame/home.html
@@ -22,7 +22,7 @@
 
         <a href="{% url 'poopadd' %}" class="game-btn poop-btn">➕ うんこたしざん</a>
         <a href="{% url 'unko_kakezan' %}" class="game-btn poop-btn">✖ うんこかけざん</a>
-
+        <a href="{% url 'weekly_ranking' %}" class="game-btn poop-btn">ランキング</a>
         <!-- <a href="{% url 'divide' %}" class="game-btn poop-btn">➗ うんこわり算</a> -->
         {% if user.is_authenticated %}
         <form method="post" action="{% url 'poopgame_logout' %}" style="display: inline;">
