引き算追加

--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -53,6 +53,7 @@
                         <h3>ゲーム制作</h3>
                         <p>ゴミモンゲームを製作中</p>
                         <a href = "{% url 'map' %}">gomimon</a>
+                        <a href = "{% url 'home'}">うんこ資本主義</a>
                     </div>
 
                 </div>
