--- a/poopgame/templates/poopgame/multiply3.html
+++ b/poopgame/templates/poopgame/multiply3.html
@@ -3,9 +3,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <!-- モバイル対応：自由拡大・縮小 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>💩うんちがけ💩</title>
+ <!-- ユーザーズームを禁止 -->
+ <meta name="viewport"
+ content="width=device-width,
+          initial-scale=1.0,
+          maximum-scale=1.0,
+          user-scalable=no">  <title>💩うんちがけ💩</title>
   <link rel="stylesheet" href="{% static 'poopgame/css/multiply3.css' %}">
 </head>
 <body>
