--- a/poopgame/templates/poopgame/poopadd.html
+++ b/poopgame/templates/poopgame/poopadd.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>うんこ足し算</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+ <!-- ユーザーズームを禁止 -->
+ <meta name="viewport"
+ content="width=device-width,
+          initial-scale=1.0,
+          maximum-scale=1.0,
+          user-scalable=no">
   <link rel="stylesheet" href="{% static 'poopgame/css/poopadd.css' %}">
   <script>
     const isChecked = {{ checked|yesno:"true,false" }};
