--- a/poopgame/templates/poopgame/subtract3.html
+++ b/poopgame/templates/poopgame/subtract3.html
@@ -3,7 +3,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+ <!-- ユーザーズームを禁止 -->
+ <meta name="viewport"
+ content="width=device-width,
+          initial-scale=1.0,
+          maximum-scale=1.0,
+          user-scalable=no">
   <title>うんこ引き算ゲーム</title>
   <link rel="stylesheet" href="{% static 'poopgame/css/subtract3.css' %}">
 </head>
