ボーナスステージ追加

--- a/poopgame/templates/poopgame/home.html
+++ b/poopgame/templates/poopgame/home.html
@@ -41,6 +41,10 @@
       <img src="{% static 'poopgame/img/poop-wink.png' %}" alt="ウィンクうんこ" class="floating-poop">
       <img src="{% static 'poopgame/img/poop-dance.png' %}" alt="踊るうんこ" class="floating-poop poop-dance">
     </div>
+    <div>
+      【更新情報】<br>
+      250514 : ボーナスステージ追加。
+    </div>
   </main>
 
   <footer>
