ショップページ作成

--- a/poopgame/templates/poopgame/capitalism.html
+++ b/poopgame/templates/poopgame/capitalism.html
@@ -19,9 +19,9 @@
 
   <main class="content">
     <section class="actions">
-      <a href="{% url 'unko_kakezan' %}" class="btn btn-primary">ろうどうする</a>
-      <button class="btn btn-secondary" disabled>きぎょうする<br><small>準備中</small></button>
-      <button class="btn btn-secondary" disabled>とうしかになる<br><small>準備中</small></button>
+      <a href="{% url 'home' %}" class="btn btn-primary">ろうどうする</a>
+      <button class="btn btn-secondary" disabled>きぎょうする<br><small>レベルが足りません</small></button>
+      <button class="btn btn-secondary" disabled>とうしかになる<br><small>レベルが足りませんn</small></button>
       <button class="btn btn-secondary" disabled>うんコラム<br><small>準備中</small></button>
     </section>
 
