--- a/poopgame/templates/poopgame/home.html
+++ b/poopgame/templates/poopgame/home.html
@@ -24,6 +24,7 @@
         <a href="{% url 'unko_hikizan' %}" class="game-btn poop-btn">➖ うんこひきざん</a>
         <a href="{% url 'unko_kakezan' %}" class="game-btn poop-btn">✖ うんこかけざん</a>
         <a href="{% url 'child_chores' %}" class="game-btn poop-btn">🧹 おけつだい 🍑</a>
+        <a href="{% url 'unko_shop' %}" class="game-btn poop-btn">🏬 おみせやさん 🪙</a>
         <a href="{% url 'weekly_ranking' %}" class="game-btn poop-btn">🏆　ランキング</a>
         <!-- <a href="{% url 'divide' %}" class="game-btn poop-btn">➗ うんこわり算</a> -->
         {% if user.is_authenticated %}
