--- a/poopgame/templates/poopgame/parent.html
+++ b/poopgame/templates/poopgame/parent.html
@@ -49,6 +49,7 @@
     <!-- ホームへ戻る -->
     <footer>
       <a href="{% url 'home' %}" class="btn-home">🏠 ホームへ戻る</a>
+      <a href="{% url 'parent_shop_admin' %}" class="btn-home">🏠 うんこショップ管理画面へ</a>
     </footer>
   </div>
 
