google adsense tag貼り付け

--- a/gomimon/templates/gomimon/gomimon.html
+++ b/gomimon/templates/gomimon/gomimon.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>ゴミモン</title>
+    <meta name="google-adsense-account" content="ca-pub-8021009005741518">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/gomimon.css' %}">
 
