--- a/poopgame/templates/poopgame/home.html
+++ b/poopgame/templates/poopgame/home.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="google-adsense-account" content="ca-pub-8021009005741518">
   <title>かいケツうんこ</title>
   <link rel="stylesheet" href="{% static 'poopgame/css/home.css' %}">
 </head>
