--- a/poopgame/templates/poopgame/capitalism.html
+++ b/poopgame/templates/poopgame/capitalism.html
@@ -3,6 +3,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-adsense-account" content="ca-pub-8021009005741518">
   <!-- モバイル対応：ズーム禁止 -->
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0,
