レベル追加

--- a/poopgame/templates/poopgame/poopadd.html
+++ b/poopgame/templates/poopgame/poopadd.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>うんこ足し算 💩</h1>
+    <h1>うんこたしざん💩レベル{{level}}</h1>
 
     <div id="poop-area">
       <div class="poops" id="poop-container1">
