メタタグを少し追加

--- a/poopgame/templates/poopgame/capitalism.html
+++ b/poopgame/templates/poopgame/capitalism.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="google-adsense-account" content="ca-pub-8021009005741518">
+  <meta name="description" content="「うんこ資本主義」の世界で、
+  働いたり投資したり…子どものうちから資本主義を体験することで、
+  人間界でも活躍できる逸材...ビッグうんこを排泄する！！">
   <!-- モバイル対応：ズーム禁止 -->
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0,
