--- a/poopgame/templates/poopgame/home.html
+++ b/poopgame/templates/poopgame/home.html
@@ -7,6 +7,11 @@
   <meta name="google-adsense-account" content="ca-pub-8021009005741518">
   <title>かいケツうんこ</title>
   <link rel="stylesheet" href="{% static 'poopgame/css/home.css' %}">
+  <meta name="description" content="かいけつうんこは、子ども向けべんきょうアプリです。かいけつうんこの世界では、これは仕事とみなされます。
+  子どもが計算やお手伝いという仕事をして給料としてうんこポイントをもらう。
+  うんこポイントを貯めて商品を購入する。
+  そういった資本主義をゲームの中で体験していただき、お金とは何かを学んでいくように設計されています。
+  また、お手伝いの設定や商品の設定は親御さんが管理します。子と親のコミュニケーションツールとしてもご活用ください。">
 </head>
 <body>
 
