--- a/poopgame/templates/poopgame/child.html
+++ b/poopgame/templates/poopgame/child.html
@@ -23,7 +23,8 @@
     </ul>
 
     <div class="auth-btn-wrap">
-      <a href="{% url 'parent_auth' %}" class="btn-auth">パパママだけのページ🔒</a>
+        <a href="{% url 'home' %}" class="btn-auth">ホーム</a>
+        <a href="{% url 'parent_auth' %}" class="btn-auth">パパママだけのページ🔒</a>
     </div>
   </div>
 </body>
