--- a/blog/templates/blog/top.html
+++ b/blog/templates/blog/top.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="ja">
 <head>
-    <link rel="icon" href="{% static 'img/favicon1.png' %}">
+    <link rel="icon" href="{% static 'img/favicon1.png' %}" type="image/x-icon">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8021009005741518"
      crossorigin="anonymous"></script>
     <meta charset="UTF-8">
