--- a/poopgame/templates/poopgame/capitalism.html
+++ b/poopgame/templates/poopgame/capitalism.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <link rel="icon" href="{% static 'img/poop-dance.png' %}" type="image/x-icon">
+
   <meta charset="UTF-8">
   <meta name="google-adsense-account" content="ca-pub-8021009005741518">
   <meta name="description" content="「うんこ資本主義」の世界で、
