--- a/poopgame/templates/poopgame/home.html
+++ b/poopgame/templates/poopgame/home.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <link rel="icon" href="{% static 'img/poop-dance.png' %}" type="image/x-icon">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="google-adsense-account" content="ca-pub-8021009005741518">
